--- a/env.example
+++ b/env.example
@@ -3,3 +3,6 @@ DATABASE_URL="postgresql://user:password@localhost:5432/tm_course_map"
 
 # Required: Secret for /api/sync (e.g. use in cron: Authorization: Bearer <value>)
 CRON_SECRET="your-secret-here"
+
+# Required for Auth.js (next-auth): generate with `npx auth secret`
+AUTH_SECRET="your-auth-secret-here"
