--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "prisma generate && next build",
         "start": "dotenv -e .env -- next start",
         "lint": "eslint",
-        "postinstall": "prisma generate"
+        "postinstall": "prisma generate",
+        "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,json,md}\""
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.11.1",
@@ -42,6 +43,7 @@
         "eslint": "^9",
         "eslint-config-next": "16.1.6",
         "postcss": "^8.4.49",
+        "prettier": "^3.8.1",
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5"
