--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
-    "next-auth": "^5.0.0-beta.30",
+    "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
