Rename to TrackCourse

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Required: PostgreSQL connection string
-DATABASE_URL="postgresql://user:password@localhost:5432/tm_course_map"
+DATABASE_URL="postgresql://user:password@localhost:5432/track_course"
 
 # Required: Secret for /api/sync (e.g. use in cron: Authorization: Bearer <value>)
 CRON_SECRET="your-secret-here"
