--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env -- next dev --webpack",
+    "dev": "dotenv -e .env -- next dev",
     "build": "prisma generate && next build",
     "start": "dotenv -e .env -- next start",
     "lint": "eslint",
